--- a/src/components/InputArea/InputArea.scss
+++ b/src/components/InputArea/InputArea.scss
@@ -1,4 +1,9 @@
 .input-box{
+  border-top: 1px solid bisque;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
   padding: 5px;
   display: flex;
   align-content: center;
