--- a/src/components/windowView/windowView.scss
+++ b/src/components/windowView/windowView.scss
@@ -1,21 +1,27 @@
 
 .window-view{
-  position: relative;
-  width: 900px;
-  height: 800px;
+  width: 600px;
+  height: 400px;
   margin: auto;
   box-sizing: border-box;
-  padding: 20px 10px;
+  padding: 10px 10px 0;
   border-radius: 4px;
   border: 1px solid bisque ;
   background-color: #EEE;
   color: olivedrab;
   font-size: 24px;
   overflow: scroll;
-  .mtitle{
-    margin: 8px auto;
-    color: orange;
-    text-align: center;
-    line-height: 14px;
+  display: flex;
+  flex-direction: column;
+  .message-body{
+    .mtitle{
+      margin: 8px auto;
+      color: orange;
+      text-align: center;
+      line-height: 14px;
+    }
+    height: 100%;
+    margin-bottom: 20px;
+    overflow: scroll;
   }
 }
